syntax="proto3";
package hello;

import "model.proto";

option go_package="package/hello";

message OrderResponse {
  int32 status=1;
  string message=2;
}


service OrderService{
  rpc NewOrder(OrderModel) returns (OrderResponse) {}
}